--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
         {
             CABLES.patch = new CABLES.Patch({
                 patchFile: 'js/x-mas_20241.json',
-                "prefixAssetPath": "/assets/",
-                "assetPath": "/assets/",
+                "prefixAssetPath": "/x-mas_2024/assets/",
+                "assetPath": "/x-mas_2024/assets/",
                 "jsPath": "js/",
                 "glCanvasId": "glcanvas",
                 "glCanvasResizeToWindow": true,
