once more assets

--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
         {
             CABLES.patch = new CABLES.Patch({
                 patchFile: 'js/x-mas_20241.json',
-                "prefixAssetPath": "/x-mas_2024/assets/",
-                "assetPath": "/x-mas_2024/assets/",
+                "prefixAssetPath": "/x-mas_2024/",
+                "assetPath": "/x-mas_2024/",
                 "jsPath": "js/",
                 "glCanvasId": "glcanvas",
                 "glCanvasResizeToWindow": true,
